[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/MainMenu/MainMenuButtons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Themes/MainMenuTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/UI/SoundButton/SoundButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/OptionsMenu/OptionsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Credits/Credits.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=5]
resource_name = "CloseSubMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "Intro"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/PlayButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/OptionsButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/CreditsButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/ExitButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/TutorialButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TitleContainer/Titles/TitlesContainer/Title:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.7, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TitleContainer/Titles/TitlesContainer/SubTitle:percent_visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1, 2.8, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0, 1.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "intro_done"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "MainMenuOpen"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/PlayButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/OptionsButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/CreditsButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/ExitButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/TutorialButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TitleContainer/Titles/TitlesContainer/Title:percent_visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("TitleContainer/Titles/TitlesContainer/SubTitle:percent_visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "OpenSubMenu"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Outro"
length = 0.5

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("TitleContainer/Titles/TitlesContainer/Title:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("TitleContainer/Titles/TitlesContainer/SubTitle:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/PlayButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/OptionsButton:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/CreditsButton:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/ExitButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MenuContainer/MainMenuButtons/ButtonsContainer/TutorialButton:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("TitleContainer/Titles/TitlesContainer/Title:percent_visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("TitleContainer/Titles/TitlesContainer/SubTitle:percent_visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("MenuContainer/MainMenuButtons:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("FlowControlContainer/FlowControl/BackButton:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "CloseSubMenu"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Intro"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "MainMenuOpen"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "OpenSubMenu"

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
advance_condition = "intro_done"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachine" id=8]
states/CloseSubMenu/node = SubResource( 12 )
states/CloseSubMenu/position = Vector2( 700, 232 )
states/Intro/node = SubResource( 7 )
states/Intro/position = Vector2( 230, 123 )
states/MainMenuOpen/node = SubResource( 10 )
states/MainMenuOpen/position = Vector2( 461, 123 )
states/OpenSubMenu/node = SubResource( 13 )
states/OpenSubMenu/position = Vector2( 700, 123 )
transitions = [ "Intro", "MainMenuOpen", SubResource( 11 ), "MainMenuOpen", "OpenSubMenu", SubResource( 14 ), "OpenSubMenu", "CloseSubMenu", SubResource( 15 ), "CloseSubMenu", "MainMenuOpen", SubResource( 16 ) ]
start_node = "Intro"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuAnimationPlayer" type="AnimationPlayer" parent="."]
anims/CloseSubMenu = SubResource( 5 )
anims/Intro = SubResource( 1 )
anims/MainMenuOpen = SubResource( 6 )
anims/OpenSubMenu = SubResource( 4 )
anims/Outro = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="MenuAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../MenuAnimationPlayer")
active = true
parameters/playback = SubResource( 9 )
parameters/conditions/intro_done = false

[node name="TitleContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 32
custom_constants/margin_top = 64
custom_constants/margin_left = 32
custom_constants/margin_bottom = 16

[node name="Titles" type="Control" parent="TitleContainer"]
margin_left = 32.0
margin_top = 64.0
margin_right = 992.0
margin_bottom = 584.0
mouse_filter = 2

[node name="TitlesContainer" type="VBoxContainer" parent="TitleContainer/Titles"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -416.0
margin_right = 416.0
margin_bottom = 97.0
custom_constants/separation = 24

[node name="Title" type="Label" parent="TitleContainer/Titles/TitlesContainer"]
margin_right = 832.0
margin_bottom = 14.0
text = "Title"
align = 1
percent_visible = 0.0

[node name="SubTitle" type="Label" parent="TitleContainer/Titles/TitlesContainer"]
margin_top = 38.0
margin_right = 832.0
margin_bottom = 52.0
text = "Subtitle"
align = 1
percent_visible = 0.0

[node name="VersionNameLabel" type="Label" parent="TitleContainer/Titles"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0

[node name="MenuContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 128
custom_constants/margin_top = 128
custom_constants/margin_left = 128
custom_constants/margin_bottom = 128

[node name="MainMenuButtons" parent="MenuContainer" instance=ExtResource( 2 )]

[node name="PlayButton" parent="MenuContainer/MainMenuButtons/ButtonsContainer" index="0"]
visible = false

[node name="TutorialButton" parent="MenuContainer/MainMenuButtons/ButtonsContainer" index="1"]
visible = false

[node name="OptionsButton" parent="MenuContainer/MainMenuButtons/ButtonsContainer" index="2"]
visible = false

[node name="CreditsButton" parent="MenuContainer/MainMenuButtons/ButtonsContainer" index="3"]
visible = false

[node name="ExitButton" parent="MenuContainer/MainMenuButtons/ButtonsContainer" index="4"]
visible = false

[node name="OptionsMenu" parent="." instance=ExtResource( 6 )]
visible = false

[node name="CreditsContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 128
custom_constants/margin_bottom = 32

[node name="Credits" parent="CreditsContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 568.0

[node name="FlowControlContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="FlowControl" type="Control" parent="FlowControlContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 584.0
mouse_filter = 2

[node name="BackButton" parent="FlowControlContainer/FlowControl" instance=ExtResource( 5 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 62.0
text = "Back"

[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButtons/ButtonsContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="FlowControlContainer/FlowControl/BackButton" to="." method="_on_BackButton_pressed"]

[editable path="MenuContainer/MainMenuButtons"]
